--- a/yingying/app/src/main/res/layout/fragment_sy.xml
+++ b/yingying/app/src/main/res/layout/fragment_sy.xml
@@ -5,12 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--创建TextView-->
-    <TextView
-        android:text="pager_1"
-        android:textSize="100sp"
-        android:textColor="#00f"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ListView
+        android:id="@+id/news_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
 
 </LinearLayout>
